Added giffy Image And other changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
       <input type="checkbox" id="darkToggle" />
         Dark Mode
     </label>
-    <button id="crackBtn">Crack the Cookie</button>
-    <div id="fortuneDisplay" class="fortune"></div>
+  
+  
+  <div class="cookie-container">
+  <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdThsd3ptMHBudHlieWNleDNiejZ0amhjN3Z5ZXRiYzN5ZXJxazF0YSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4GW0C8HbjJPMOlzpnw/giphy.gif" alt="Cookie img " class="cookie-img">
+  <button id="crackBtn">Crack the Cookie</button>
+  
+</div>
+ <div id="fortuneDisplay" class="fortune"></div>
   </div>
 </body>
 </html>
